updated environment variables

--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -1,5 +1,5 @@
 DB_USER=users_j755_user
 DB_PASSWORD=8zOdOcK2msEzDAn5xqE5ACJpKaZ25MB0
-DB_HOST=dpg-cud7agdumphs73dhtak0-a.oregon-postgres.render.com
+DB_HOST=dpg-cud7agdumphs73dhtak0-a
 DB_PORT=5432
 DB_DATABASE=users_j755
